--- a/src/styles.less
+++ b/src/styles.less
@@ -98,6 +98,13 @@
                     color:#fff !important;
                 }
             }
+            .react-jinke-music-player-mobile-singer{
+                .name{
+                    &::before,&::after{
+                        background-color: @font-color;
+                    }
+                }
+            }
             
         }
     }
